--- a/codecov.yml
+++ b/codecov.yml
@@ -1,36 +1,9 @@
-name: Test with Coverage
-
-on:
-  pull_request:
-
-permissions:
-  checks: write
-  pull-requests: write
-
-env:
-  CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-
-jobs:
-  test-cov:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.11
-
-      - name: Install Python dependencies
-        run: pip install -r requirements.txt
-        
-      - name: Run tests and collect coverage
-        run: pytest --cov --cov-report=xml
-
-      - name: Install Codecov
-        run: curl -Os https://cli.codecov.io/latest/linux/codecov && chmod +x codecov
-
-      - name: Upload coverage to Codecov
-        run: ./codecov --codecov-yml-path=./codecov.yml do-upload --file=./coverage.xml --commit-sha ${{ github.event.pull_request.head.sha }}
-        
+coverage:
+  status:
+    project: default
+    patch: default
+  target: 100%
+  threshold: 98%
+  warn_threshold: 95%
+  removed_code_behavior: off
+  require_ci_to_pass: false
