--- a/.github/workflows/branch_name_validation.yml
+++ b/.github/workflows/branch_name_validation.yml
@@ -2,6 +2,8 @@ name: Branch Naming Validation
 
 on:
   pull_request:
+    branches:
+      - main
     types: [opened, synchronize, reopened]
 
 permissions:
