--- a/.github/workflows/pr_body_validation.yml
+++ b/.github/workflows/pr_body_validation.yml
@@ -2,6 +2,8 @@ name: Pull Request Body Validation
 
 on:
   pull_request:
+    branches:
+      - main
     types: [opened, synchronize, reopened]
 
 permissions:
