--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,6 +2,9 @@ name: Test and Comment
 
 on:
   pull_request:
+    branches:
+      - main
+    types: [opened, synchronize, reopened]
 
 permissions:
   checks: write
