--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,6 +6,10 @@ on:
       - main
     types: [opened, synchronize, reopened]
 
+permissions:
+  checks: write
+  pull-requests: write
+
 jobs:
   coverage:
     runs-on: ubuntu-latest
@@ -27,17 +31,13 @@ jobs:
       - name: Run tests and check coverage
         id: coverage_check
         run: |
-          pytest --cov=src --cov-report=term-missing
-          coverage report --fail-under=80
+          .venv/bin/python -m pytest --cov=src --cov-report=term-missing
+          .venv/bin/python coverage report --fail-under=80
         continue-on-error: true
-
-      - name: Fail if coverage is under threshold
-        if: ${{ steps.coverage_check.outcome == 'failure' }}
-        run: exit 1
 
       - name: Post PR comment about coverage failure
         if: ${{ steps.coverage_check.outcome == 'failure' }}
-        uses: actions/github-script@v6
+        uses: actions/github-script@v5
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
@@ -48,3 +48,7 @@ jobs:
               repo: context.repo.repo,
               body: message
             });
+      
+      - name: Fail if coverage is under threshold
+        if: ${{ steps.coverage_check.outcome == 'failure' }}
+        run: exit 1
