--- a/.github/workflows/conventional_pr_name.yml
+++ b/.github/workflows/conventional_pr_name.yml
@@ -6,6 +6,10 @@ on:
       - main
     types: [opened, synchronize, reopened, edited]
 
+permissions:
+  checks: write
+  pull-requests: write
+
 jobs:
   validate-pr-title:
     runs-on: ubuntu-latest
