--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
-FROM mcr.microsoft.com/devcontainers/python:3.11
+FROM mcr.microsoft.com/devcontainers/python:3.12
 
-RUN pip install flit==3.8.0
-RUN apt-get update && apt-get install -y make 
+RUN pip install --upgrade pip \
+    && pip install flit==3.8.0 virtualenv \
+    && apt-get update && apt-get install -y make 
