chore: enable branch name check in pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,8 @@ repos:
         language: system
         types: [python]
         pass_filenames: false
+      - id: check-branch-name
+        name: check-branch-name
+        entry: make check-branch-name
+        language: system
+        pass_filenames: false
