chore: add test coverage check in pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,3 +38,8 @@ repos:
         entry: make check-conventional-commit
         language: system
         pass_filenames: false
+      - id: check-coverage
+        name: check-coverage
+        entry: make test-cov
+        language: system
+        pass_filenames: false
