--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
         pass_filenames: false
       - id: check-conventional-commit
         name: check-conventional-commit
-        entry: make check-conventional-commit
+        entry: make _check-conventional-commit COMMIT_MSG_FILE={}
         language: system
         stages: [commit-msg]
         pass_filenames: true
